# Gestor_Clientes_clase

./: README.md  api.py  clientes.csv  pyproject.toml  run.py  ui.py
gestor/: clientes.csv  config.py  database.py  helpers.py  menu.py  run.py  test_database.py  ui.py
gestor/test/: test_database.py
tests/: test_database.py
