[tool.poetry]
name = "gestorclientesclase"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.12.0"
unittest = "^0.0"
Everything-Tkinter = "^0.2"
fastapi = "^0.85.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
